Use the application object passed as an argument instead of a static global variable

--- a/libraries/manifest/templates/plugins/mf_plugins.cpp.j2
+++ b/libraries/manifest/templates/plugins/mf_plugins.cpp.j2
@@ -9,10 +9,10 @@
 
 namespace hive { namespace plugins {
 
-void register_plugins()
+void register_plugins( appbase::application& app )
 {
    {% for plugin in plugins %}
-   appbase::app().register_plugin< hive::plugins::{{ plugin["plugin_namespace"] }}::{{ plugin["plugin_name" ] }}_plugin >();
+   app.register_plugin< hive::plugins::{{ plugin["plugin_namespace"] }}::{{ plugin["plugin_name" ] }}_plugin >();
    {% endfor %}
 }
 
